<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ekonobeeva.signin2.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:id="@+id/email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="E-mail"/>

        <EditText
            android:id="@+id/email_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="20" />
        <TextView
            android:id="@+id/email_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_error_field"
            android:textColor="@color/errorColor"/>
        <TextView
            android:id="@+id/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_field" />
        <EditText
            android:id="@+id/password_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="20" />
        <TextView
            android:id="@+id/password_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/errorPassword"
            android:textColor="@color/errorColor"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <EditText
            android:id="@+id/repeat_password_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="20"
            android:hint="@string/repeate_password"/>
        <TextView
            android:id="@+id/repeat_password_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/errorRepeatPassword"
            android:textColor="@color/errorColor"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Регистрация"
            android:textColor="@color/buttonColor"
            android:id="@+id/check_in_button"
            android:enabled="false"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|top">
            <TextView
                android:id="@+id/social_sites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/socialSites"
                android:gravity="center"
                android:layout_weight="1"/>
            <LinearLayout
                android:id="@+id/lll"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="vkontakte"
                    android:textColor="@color/buttonColor"
                    android:id="@+id/vkButton"
                    android:layout_weight="1"
                    android:gravity="center"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="facebook"
                    android:textColor="@color/buttonColor"
                    android:id="@+id/facebookButton"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|bottom">
            <TextView
                android:id="@+id/policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ConfederationPolicy"
                android:gravity="center" />
            <TextView
                android:id="@+id/ConfederationPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ConfederationPolicy2"
                android:gravity="center_horizontal"
                android:autoLink="web" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>
